Set compiler flag --enable-preview